--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,5 +1,5 @@
 .main-wrapper {
   width: 100%;
   /* height: 100vh; */
-  margin: 0 0 0 12rem;
+  padding: 0 0 0 12rem;
 }
